// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`----- Checkbox Component ----- Renders checked correctly without crashing 1`] = `
<DocumentFragment>
  <span
    class="checkbox checkbox--checked"
    data-testid="checkbox-test"
  >
    <input
      checked=""
      class="checkbox__input"
      data-testid="checkbox-test-input"
      id="checkbox-test"
      type="checkbox"
    />
    <span
      class="checkbox__icn checkbox__icn--checked icn icn--md icn--inverse"
      title="Tick"
    />
  </span>
</DocumentFragment>
`;

exports[`----- Checkbox Component ----- Renders disabled correctly without crashing 1`] = `
<DocumentFragment>
  <span
    class="checkbox checkbox--disabled"
    data-testid="checkbox-test"
  >
    <input
      class="checkbox__input"
      data-testid="checkbox-test-input"
      disabled=""
      id="checkbox-test"
      type="checkbox"
    />
    <span
      class="checkbox__icn icn icn--md icn--inverse"
      title="Tick"
    />
  </span>
</DocumentFragment>
`;

exports[`----- Checkbox Component ----- Renders without crashing 1`] = `
<DocumentFragment>
  <span
    class="checkbox"
    data-testid="checkbox-test"
  >
    <input
      class="checkbox__input"
      data-testid="checkbox-test-input"
      id="checkbox-test"
      type="checkbox"
    />
    <span
      class="checkbox__icn icn icn--md icn--inverse"
      title="Tick"
    />
  </span>
</DocumentFragment>
`;
